--- a/config.yaml
+++ b/config.yaml
@@ -8,8 +8,8 @@ trainer:
       pishock_username: ''
       pishock_api_key: ''
       feature_focus: true
-      feature_proximity: false
-      feature_tricks: false
+      feature_proximity: true
+      feature_tricks: true
       feature_scolding: false
       difficulty: Normal
 pet: {}
