--- a/config.yaml
+++ b/config.yaml
@@ -8,9 +8,9 @@ trainer:
       pishock_username: ''
       pishock_api_key: ''
       feature_focus: true
-      feature_proximity: true
-      feature_tricks: true
-      feature_scolding: true
+      feature_proximity: false
+      feature_tricks: false
+      feature_scolding: false
       difficulty: Normal
       names:
       - Kit
